# video-summariser

./: .gitignore  README.md  attributions.md  download_models.py  requirements.txt  test_client.py  test_generation.py  test_orchestrator.py  test_persistence.py  test_spec_queries.py  test_summarization.py  test_vision.py
backend/: grpc_server.py
backend/mcp_common/: client.py  server.py
backend/mcp_servers/: generation_server.py  summarization_server.py  transcription_server.py  vision_server.py
backend/orchestrator/: orchestrator.py
backend/proto/: video.proto
backend/storage/: database.py
docs/: ARCHITECTURE.md  SETUP.md  WRITEUP.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/proto/: video.proto
frontend/src-tauri/src/: lib.rs
sample_outputs/: law-slides.pptx  psychology-slides.pptx
samples/: sample_queries.md
