[package]
name = "frontend"
version = "0.1.0"
description = "Video Summariser"
authors = ["you"]
edition = "2021"

[lib]
name = "frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12"
protoc-bin-vendored = "3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# gRPC client - talks to the Python backend on localhost:50051
tonic = { version = "0.12", default-features = false, features = ["transport", "codegen", "prost"] }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
